# GenZPT

./: README.md  ai.py  api.py  main.py  pyproject.toml
static/: chatstyle.css  index.html  index.js
